--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
             <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
           {% endif %}
-          <a href="{{ https://github.com/galves46 }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="{{ https://github.com/galves46 }}" class="btn btn-github"><span class="icon"></span>Check GitHub</a>
         </section>
       </div>
     </header>
